<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. All Rights Reserved.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alcala.patienthelperapp.SignUpActivity"
    android:background="@drawable/background_style">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/LinearLayoutStyles">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/firstNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" >
                <requestFocus />
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" >
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/MyTextView.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addPatientButton"
            android:text="@string/sign_up"
            android:onClick="addPatientBtn">
        </Button>

        <Button
            style="@style/MyTextView.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancelSignUp"
            android:text="@string/cancel"
            android:onClick="cancelBtn">
        </Button>

    </LinearLayout>
</ScrollView>
